# ShareNet-OS-Project

./: .gitattributes  .gitignore  DOCUMENTATION.md  Makefile  PRESENTATION.md  README.md  RUNBOOK.md  go.mod
client_files/: sample.txt
cmd/client/: main.go
cmd/server/: main.go
include/: chunk.h  client.h  config.h  file_utils.h  net_compat.h  protocol.h  server.h  socket_utils.h
internal/appui/: dialog.go  progress.go  status_dot.go  theme.go
internal/netshare/: protocol.go  protocol_test.go  server.go
scripts/: build-fltk-linux.sh  build-fltk-macos.sh  build-fltk-windows.ps1  build-linux.sh  build-macos.sh  build-qt-linux.sh  build-qt-macos.sh  build-qt-windows.ps1  build-windows.bat  build-windows.ps1  package-windows-portable.ps1
src/client/: client.c  client_main.c
src/common/: chunk.c  file_utils.c  protocol.c  socket_utils.c
src/fltk/: CMakeLists.txt  FltkClient.cpp  FltkProtocol.hpp  FltkServer.cpp  vcpkg.json
src/gui/: client_gui.c  server_gui.c
src/qt/: CMakeLists.txt  Protocol.h  QtClient.cpp  QtServer.cpp  vcpkg.json
src/server/: server.c  server_main.c
